--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead">Tuesday, Aug 31st 2021</p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
@@ -35,6 +35,7 @@
           8:00am
         </div>
         <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="hour9" class="row time-block">
@@ -42,6 +43,7 @@
           9:00am
         </div>
         <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="hour10" class="row time-block">
@@ -49,6 +51,7 @@
           10:00am
         </div>
         <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="hour11" class="row time-block">
@@ -56,6 +59,7 @@
           11:00am
         </div>
         <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="hour12" class="row time-block">
@@ -63,6 +67,7 @@
           12:00pm
         </div>
         <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="hour13" class="row time-block">
@@ -70,6 +75,7 @@
           1:00pm
         </div>
         <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="hour14" class="row time-block">
@@ -77,6 +83,7 @@
           2:00pm
         </div>
         <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="hour15" class="row time-block">
@@ -84,6 +91,7 @@
           3:00pm
         </div>
         <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="hour16" class="row time-block">
@@ -91,6 +99,7 @@
           4:00pm
         </div>
         <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="hour17" class="row time-block">
@@ -98,6 +107,7 @@
           5:00pm
         </div>
         <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
